--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -22,6 +22,7 @@
     "@leafygreen-ui/typography": "^16.5.0",
     "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stream-browserify": "^3.0.0"
@@ -33,6 +34,7 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
