move drone file

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,10 @@
+# ---
+# Chat Server pipelines
+# ---
 ---
 kind: pipeline
 type: kubernetes
-name: test
+name: test-chat-server
 
 trigger:
   branch:
@@ -10,27 +13,35 @@ trigger:
   event:
     - push
     - tag
+  paths:
+    include:
+      - chat-server/**/*
 
 steps:
   - name: test
     image: node:18
     commands:
+      - cd chat-server
       - npm ci
       - npm run lint
       # Skipping testing for now since we don't have any tests
       # - npm run test
 
 ---
-depends_on: ['test']
+depends_on: ["test"]
 kind: pipeline
 type: kubernetes
-name: staging-build
+name: staging-build-chat-server
 
 trigger:
   branch:
     - main
+    - DOCSP-30565 # TODO: remove later when ready to merge
   event:
     - push
+  paths:
+    include:
+      - chat-server/**/*
 
 steps:
   # Builds and publishes Docker image for staging
@@ -52,7 +63,7 @@ steps:
   - name: promote-staging
     image: drone/cli:1.4.0-alpine
     commands:
-      # TODO: replace with our own server..real name TBD
+      # TODO: how to incorporate entering the chat-server directory?
       - drone build promote mongodb/docs-chat ${DRONE_BUILD_NUMBER} staging
     environment:
       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
@@ -62,7 +73,7 @@ steps:
 ---
 kind: pipeline
 type: kubernetes
-name: staging-deploy
+name: staging-deploy-chat-server
 
 trigger:
   event:
@@ -79,19 +90,19 @@ steps:
       chart_version: 4.12.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: docs
-      # TODO: replace with our own server..real name TBD
       release: chat-server
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-staging,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=snooty-data-api.docs.staging.corp.mongodb.com
-      values_files: ['environments/staging.yml']
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-staging,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=chat-server.docs.staging.corp.mongodb.com
+      values_files: ["environments/staging.yml"]
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
 
 ---
-depends_on: ['test']
+# NOTE: not worrying about production stuff just yet
+depends_on: ["test"]
 kind: pipeline
 type: kubernetes
-name: production-build
+name: production-build-chat-server
 
 trigger:
   event:
@@ -114,10 +125,9 @@ steps:
         from_secret: ecr_secret_key
 
   # Promotes current drone build to production environment
-  - name: promote-production
+  - name: promote-production-chat-server
     image: drone/cli:1.4.0-alpine
     commands:
-      # TODO: replace with our own server..real name TBD
       - drone build promote docs-chat ${DRONE_BUILD_NUMBER} production
     environment:
       DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
@@ -127,7 +137,7 @@ steps:
 ---
 kind: pipeline
 type: kubernetes
-name: production-deploy
+name: production-deploy-chat-server
 
 trigger:
   event:
@@ -144,10 +154,9 @@ steps:
       chart_version: 4.12.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: docs
-      # TODO: replace with our own server..real name TBD
       release: docs-chat
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=snooty-data-api.docs.prod.corp.mongodb.com
-      values_files: ['environments/production.yml']
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=chat-server.docs.prod.corp.mongodb.com
+      values_files: ["environments/production.yml"]
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
