--- a/.drone.yml
+++ b/.drone.yml
@@ -45,9 +45,11 @@ trigger:
 
 steps:
   # Builds and publishes Docker image for staging
-  - name: publish-staging
+  - name: publish-staging-chat-server
+    # TODO: find Dockerfile in the chat-server directory
     image: plugins/kaniko-ecr
     settings:
+      dockerfile: chat-server/Dockerfile
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
@@ -60,7 +62,7 @@ steps:
         from_secret: ecr_secret_key
 
   # Promotes current drone build to staging environment
-  - name: promote-staging
+  - name: promote-staging-chat-server
     image: drone/cli:1.4.0-alpine
     commands:
       - drone build promote mongodb/docs-chat ${DRONE_BUILD_NUMBER} staging
