--- a/.drone.yml
+++ b/.drone.yml
@@ -50,6 +50,7 @@ steps:
     image: plugins/kaniko-ecr
     settings:
       dockerfile: chat-server/Dockerfile
+      context: chat-server
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
