--- a/.drone.yml
+++ b/.drone.yml
@@ -85,7 +85,7 @@ trigger:
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
-  - name: deploy-staging
+  - name: deploy-staging-chat-server
     image: quay.io/mongodb/drone-helm:v3
     settings:
       chart: mongodb/web-app
@@ -112,7 +112,7 @@ trigger:
 
 steps:
   # Builds and publishes Docker image for production
-  - name: publish-production
+  - name: publish-production-chat-server
     image: plugins/kaniko-ecr
     settings:
       create_repository: true
@@ -149,7 +149,7 @@ trigger:
 
 steps:
   # Deploys Docker image associated with production build that triggered promotion
-  - name: deploy-production
+  - name: deploy-production-chat-server
     image: quay.io/mongodb/drone-helm:v3
     settings:
       chart: mongodb/web-app
