--- a/chat-server/environments/production.yml
+++ b/chat-server/environments/production.yml
@@ -5,8 +5,9 @@ env:
   PORT: 3000
   SNOOTY_DB_NAME: docs_chat_prod
 
-envSecrets:
-  ATLAS_URI: chat-server-atlas-uri-prod
+# TODO: add this via kubectl when database is created
+# envSecrets:
+#   ATLAS_URI: chat-server-atlas-uri-prod
 
 ingress:
   enabled: true
