--- a/chat-server/environments/staging.yml
+++ b/chat-server/environments/staging.yml
@@ -5,8 +5,9 @@ env:
   PORT: 3000
   SNOOTY_DB_NAME: docs_chat_staging
 
-envSecrets:
-  ATLAS_URI: chat-server-atlas-uri-staging
+# TODO: add this via kubectl when database is created
+# envSecrets:
+#   ATLAS_URI: chat-server-atlas-uri-staging
 
 ingress:
   enabled: true
