--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,7 @@ steps:
       - cd chat-server
       - npm ci
       - npm run lint
+      # TODO add back in when working test suite exists
       # Skipping testing for now since we don't have any tests
       # - npm run test
 
@@ -101,7 +102,10 @@ steps:
 
 ---
 # --------------------
-# NOTE: not worrying about production stuff just yet
+# TODO: Validate production deployment.
+# Not worrying about production stuff just yet.
+# The below config *should* work, but it hasn't been tested yet, so odds are that
+# it will need to be tweaked.
 # --------------------
 depends_on: ["test-chat-server"]
 kind: pipeline
@@ -119,7 +123,7 @@ steps:
     settings:
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
-      repo: docs/${DRONE_REPO_NAME}
+      repo: docs/${DRONE_REPO_NAME}-chat-server
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-production
         - latest-production
@@ -159,8 +163,8 @@ steps:
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: docs
       release: docs-chat
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=chat-server.docs.prod.corp.mongodb.com
-      values_files: ["environments/production.yml"]
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-server.docs.prod.corp.mongodb.com
+      values_files: ["chat-server/environments/production.yml"]
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
