--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
+    "openai": "^3.2.1",
     "stream-json": "^1.8.0",
     "winston": "^3.9.0"
   },
