--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -19,6 +19,7 @@
     "@leafygreen-ui/icon": "^11.16.1",
     "@leafygreen-ui/icon-button": "^15.0.11",
     "@leafygreen-ui/leafygreen-provider": "^3.1.3",
+    "@leafygreen-ui/modal": "^15.0.3",
     "@leafygreen-ui/text-input": "^12.1.13",
     "@leafygreen-ui/typography": "^16.5.0",
     "buffer": "^6.0.3",
