--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -18,6 +18,7 @@
     "@leafygreen-ui/badge": "^8.0.7",
     "@leafygreen-ui/banner": "^7.0.8",
     "@leafygreen-ui/card": "^9.0.8",
+    "@leafygreen-ui/code": "^14.2.6",
     "@leafygreen-ui/icon": "^11.16.1",
     "@leafygreen-ui/icon-button": "^15.0.11",
     "@leafygreen-ui/leafygreen-provider": "^3.1.3",
@@ -29,6 +30,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
