--- a/design_docs/db/schema/pages.yml
+++ b/design_docs/db/schema/pages.yml
@@ -2,7 +2,8 @@
 $schema: http://json-schema.org/draft-07/schema#
 type: object
 properties:
-  url:
+  _id:
+    bsonType: objectId
     type: string
     format: uri
     description: The URL of the page with the chunk content.
