draft embeddings service, tests, and integrations

--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -1,7 +1,5 @@
-# TODO: include our relevant env vars here
-# Connection string to be used for MongoDB to connect to Atlas
-MONGODB_CONNECTION_URI=mongodb://localhost:27017
 # The port number used for the app server
 PORT=3000
-# DB to connect to
-MONGODB_DB_NAME=docs_chat
+OPENAI_ENDPOINT=https://...
+OPENAI_API_KEY=abc123
+OPENAI_EMBEDDING_MODE=text-embedding-ada-002
