--- a/chat-server/environments/production.yml
+++ b/chat-server/environments/production.yml
@@ -3,11 +3,11 @@ service:
 
 env:
   PORT: 3000
-  SNOOTY_DB_NAME: docs_chat_prod
+  MONGODB_DB_NAME: docs_chat_prod
 
 # TODO: add this via kubectl when database is created
 # envSecrets:
-#   ATLAS_URI: chat-server-atlas-uri-prod
+#   MONGODB_CONNECTION_URI: chat-server-atlas-uri-prod
 
 ingress:
   enabled: true
