--- a/chat-server/environments/staging.yml
+++ b/chat-server/environments/staging.yml
@@ -3,11 +3,11 @@ service:
 
 env:
   PORT: 3000
-  SNOOTY_DB_NAME: docs_chat_staging
+  MONGODB_DB_NAME: docs_chat_staging
 
 # TODO: add this via kubectl when database is created
 # envSecrets:
-#   ATLAS_URI: chat-server-atlas-uri-staging
+#   MONGODB_CONNECTION_URI: chat-server-atlas-uri-staging
 
 ingress:
   enabled: true
