--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -1,11 +1,7 @@
 # TODO: include our relevant env vars here
 # Connection string to be used for MongoDB to connect to Atlas
 MONGODB_CONNECTION_URI=mongodb://localhost:27017
-# The user who performed the build or uploaded build data through the persistence 
-# module. By default, this should be docsworker-xlarge. Otherwise, it should be 
-# your local machine's user (whoami)
-BUILDER_USER=docsworker-xlarge
 # The port number used for the app server
 PORT=3000
-# snooty_* db to connect to for build artifacts
-MONGODB_DB_NAME=snooty_dev
+# DB to connect to
+MONGODB_DB_NAME=docs_chat
