(DOCSP-30576): Stub out Q&A server (#4)
* start stubbing out classes and routes

* Add common types

* Add embedding service stubbed out

* refactor comment

* fully stub out server

* update stubs with api spec changes

* Remove custom prettierrc, apply prettier, and npm audit fix

* Fix .env.example and tsconfig

* Consistentize env var names across project

* Update eslintrc and tsconfig

* Address comments

---------

Co-authored-by: Chris Bush <chris.bush@mongodb.com>

--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs-chat-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "The Q&A server for the docs AI chatbot.",
   "main": "index.js",
   "scripts": {
     "build": "rm -rf ./dist/ && tsc",
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
+    "openai": "^3.2.1",
     "stream-json": "^1.8.0",
     "winston": "^3.9.0"
   },
