--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-transition-group": "^4.4.5",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
