--- a/ingest/tsconfig.json
+++ b/ingest/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "outDir": "./build",
     "allowJs": false,
-    "target": "ES5",
+    "target": "es2016",
+    "module": "CommonJS",
     "esModuleInterop": true,
     "lib": ["ES2020"],
     "downlevelIteration": true,
@@ -10,13 +11,10 @@
     "strict": true,
     "declaration": true,
     "declarationMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "moduleResolution": "nodenext"
   },
   "sourceMap": true,
-  "include": [
-    "./src/**/*.ts"
-  ],
-  "exclude": [
-    "**/*.test.ts"
-  ]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["**/*.test.ts"]
 }
