--- a/ingest/package.json
+++ b/ingest/package.json
@@ -20,22 +20,23 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-typescript": "^7",
+    "@babel/types": "^7.22.5",
     "@types/jest": "^26",
     "@types/node": "^12",
-    "@typescript-eslint/eslint-plugin": "^4",
-    "@typescript-eslint/parser": "^4",
-    "eslint": "^6",
-    "eslint-config-prettier": "^6",
-    "eslint-plugin-prettier": "^3",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "eslint": "^8",
+    "eslint-config-prettier": "^8",
+    "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
-    "jest": "^26",
+    "jest": "^29",
     "prettier": "^2",
-    "release-it": "^15.5.1",
-    "ts-jest": "^26",
+    "release-it": "^15",
+    "ts-jest": "^29",
     "typedoc": "^0",
-    "typescript": "^4"
+    "typescript": "^5"
   },
   "dependencies": {
-    "yargs": "^15.4.1"
+    "yargs": "^17"
   }
 }
