update .env.example for PR changes

--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -1,5 +1,7 @@
 # The port number used for the app server
 PORT=3000
-OPENAI_ENDPOINT=https://...
-OPENAI_API_KEY=abc123
-OPENAI_EMBEDDING_MODE=text-embedding-ada-002
+OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/openai/deployments/
+OPENAI_API_KEY=<api_key>
+OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
