--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "prettier": "prettier '**/*.{js,jsx,ts,tsx,json,md}'",
     "start": "node ./dist/index.js",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "engines": {
     "node": "^18",
