(DOCSP-30618): Create embeddings service (#6)
* draft embeddings service, tests, and integrations

* fix merge conflict

* working test suite + separate openai integration

* add + clean up tests

* refactor openai integration args

* update .env.example for PR changes

* mplement CB feedback

* export types and modules

--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -1,7 +1,7 @@
-# TODO: include our relevant env vars here
-# Connection string to be used for MongoDB to connect to Atlas
-MONGODB_CONNECTION_URI=mongodb://localhost:27017
 # The port number used for the app server
 PORT=3000
-# DB to connect to
-MONGODB_DB_NAME=docs_chat
+OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/openai/deployments/
+OPENAI_API_KEY=<api_key>
+OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
