--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "common-tags": "^1.8.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
@@ -29,14 +30,20 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/common-tags": "^1.8.1",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "@types/stream-json": "^1.7.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.2",
