--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "prettier": "prettier '**/*.{js,jsx,ts,tsx,json,md}'",
     "start": "node ./dist/index.js",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "engines": {
     "node": "^18",
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/openai": "^1.0.0-beta.2",
     "common-tags": "^1.8.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
