draft content service

--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -6,3 +6,5 @@ OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
 OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
 OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
+MONGODB_CONNECTION_URI=<connection_uri>
+VECTOR_SEARCH_INDEX_NAME=<index_name>
