--- a/ingest/package.json
+++ b/ingest/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "^29",
+    "mongodb-memory-server": "^8.13.0",
     "prettier": "^2",
     "release-it": "^15",
     "ts-jest": "^29",
