--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -1,8 +1,26 @@
 {
   "name": "mongodb-docs-chatbot-ui",
-  "private": true,
-  "version": "0.0.0",
+  "description": "UI components for the MongoDB Docs Chatbot",
+  "author": "MongoDB, Inc.",
+  "license": "Apache-2.0",
+  "version": "0.0.1-8",
   "type": "module",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "main": "./dist/docs-chatbot.umd.js",
+  "module": "./dist/docs-chatbot.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/docs-chatbot.es.js",
+      "require": "./dist/docs-chatbot.umd.js"
+    },
+    "./css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,11 +28,10 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "release": "release-it"
   },
   "dependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@leafygreen-ui/badge": "^8.0.7",
     "@leafygreen-ui/banner": "^7.0.8",
     "@leafygreen-ui/box": "^3.1.4",
@@ -26,15 +43,15 @@
     "@leafygreen-ui/leafygreen-provider": "^3.1.3",
     "@leafygreen-ui/loading-indicator": "^1.0.0",
     "@leafygreen-ui/modal": "^15.0.3",
+    "@leafygreen-ui/skeleton-loader": "^1.0.1",
     "@leafygreen-ui/text-input": "^12.1.13",
     "@leafygreen-ui/typography": "^16.5.0",
     "@uidotdev/usehooks": "^2.0.1",
     "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
     "prettier": "^2.8.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-merge-refs": "^2.0.2",
     "react-transition-group": "^4.4.5",
     "stream-browserify": "^3.0.0"
   },
@@ -58,8 +75,13 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "release-it": "^15.11.0",
     "storybook": "^7.0.20",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-libcss": "^1.1.0",
+    "vite-plugin-node-polyfills": "^0.9.0"
   }
 }
