Implement ingest store/database (#8)
* Update deps

* Add dotenv

* Implement database connection

* Add ingest database test

* Update ingest/src/main.ts

Co-authored-by: Ben Perlmutter <90647379+mongodben@users.noreply.github.com>

---------

Co-authored-by: Ben Perlmutter <90647379+mongodben@users.noreply.github.com>

--- a/ingest/tsconfig.json
+++ b/ingest/tsconfig.json
@@ -2,21 +2,19 @@
   "compilerOptions": {
     "outDir": "./build",
     "allowJs": false,
-    "target": "ES5",
+    "target": "es2016",
+    "module": "CommonJS",
     "esModuleInterop": true,
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "downlevelIteration": true,
     "strictNullChecks": true,
     "strict": true,
     "declaration": true,
     "declarationMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "moduleResolution": "nodenext"
   },
   "sourceMap": true,
-  "include": [
-    "./src/**/*.ts"
-  ],
-  "exclude": [
-    "**/*.test.ts"
-  ]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["**/*.test.ts"]
 }
