--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.2",
     "common-tags": "^1.8.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gpt3-tokenizer": "^1.1.5",
@@ -38,6 +39,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@types/common-tags": "^1.8.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/stream-json": "^1.7.3",
