Convert to ESM due to dependency

--- a/ingest/tsconfig.json
+++ b/ingest/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./build",
     "allowJs": false,
     "target": "es2016",
-    "module": "CommonJS",
+    "module": "NodeNext",
     "esModuleInterop": true,
     "lib": ["ES2020", "DOM"],
     "downlevelIteration": true,
