--- a/ingest/package.json
+++ b/ingest/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Ingests data sources and stores embeddings.",
   "main": "./build/main.js",
+  "type": "module",
   "bin": {
     "ingest": "./build/main.js"
   },
@@ -24,6 +25,7 @@
     "@types/deep-equal": "^1.0.1",
     "@types/jest": "^26",
     "@types/node": "^12",
+    "@types/stream-json": "^1.7.3",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -42,6 +44,9 @@
     "deep-equal": "^2.2.1",
     "dotenv": "^16",
     "mongodb": "^5",
+    "node-fetch": "^3.3.1",
+    "readable-web-to-node-stream": "^3.0.2",
+    "stream-json": "^1.8.0",
     "yargs": "^17"
   }
 }
