Implement devcenter data source
Needs IP whitelisted or VPN connection to work

--- a/ingest/.env.example
+++ b/ingest/.env.example
@@ -5,3 +5,6 @@ MONGODB_CONNECTION_URI=mongodb://localhost:27017
 PORT=3000
 # DB to connect to
 MONGODB_DB_NAME=docs_chat
+
+# Connection string for DevCenter
+DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sewho.mongodb.net/?retryWrites=true&w=majority"
