--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -22,16 +22,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/openai": "^1.0.0-beta.2",
+    "chat-core": "file:../chat-core",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gpt3-tokenizer": "^1.1.5",
     "langchain": "^0.0.95",
-    "mongodb": "^5.2.0",
     "openai": "^3.2.1",
     "stream-json": "^1.8.0",
+    "@azure/openai": "^1.0.0-beta.2",
     "winston": "^3.9.0"
   },
   "devDependencies": {
