Address comments & clean up Snooty littered types

--- a/ingest/tsconfig.json
+++ b/ingest/tsconfig.json
@@ -12,7 +12,7 @@
     "declaration": true,
     "declarationMap": true,
     "resolveJsonModule": true,
-    "moduleResolution": "nodenext"
+    "moduleResolution": "Node"
   },
   "sourceMap": true,
   "include": ["./src/**/*.ts"],
