update scripts to add staging data to DB

--- a/mongodb-atlas/package.json
+++ b/mongodb-atlas/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "add-search-index:dev": "ts-node add-search-index.ts .env.dev"
+    "add-search-index:dev": "ts-node add-search-index.ts .env.dev",
+    "add-search-index:staging": "ts-node add-search-index.ts .env.staging"
   },
   "keywords": [],
   "author": "",
