--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ name: test-chat-server
 trigger:
   branch:
     - main
+    - DOCSP-30964 # TODO: remove this line once DOCSP-30964 is resolved
   event:
     - push
     - tag
@@ -20,12 +21,13 @@ steps:
   - name: test
     image: node:18
     commands:
+      - cd chat-core
+      - npm ci
+      - cd ..
       - cd chat-server
       - npm ci
       - npm run lint
-      # TODO add back in when working test suite exists
-      # Skipping testing for now since we don't have any tests
-      # - npm run test
+      - npm run test
 
 ---
 depends_on: ["test-chat-server"]
@@ -36,7 +38,7 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
-    - DOCSP-30565 # TODO: remove later when ready to merge
+    - DOCSP-30964 # TODO: remove this line once DOCSP-30964 is resolved
   event:
     - push
   paths:
@@ -46,7 +48,6 @@ trigger:
 steps:
   # Builds and publishes Docker image for staging
   - name: publish-staging-chat-server
-    # TODO: find Dockerfile in the chat-server directory
     image: plugins/kaniko-ecr
     settings:
       dockerfile: chat-server/Dockerfile
