--- a/chat-core/.gitignore
+++ b/chat-core/.gitignore
@@ -75,7 +75,8 @@ web_modules/
 
 # dotenv environment variables file
 .env
-.env.test
+.env.*
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
