--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -12,7 +12,8 @@
     "prettier": "prettier '**/*.{js,jsx,ts,tsx,json,md}'",
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
-    "seed-content:dev": "ts-node seed-content"
+    "seed-content:dev": "ts-node seed-content .env",
+    "seed-content:staging": "ts-node seed-content .env.staging"
   },
   "engines": {
     "node": "^18",
