--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -13,6 +13,7 @@
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
     "seed-content:dev": "ts-node seed-content .env",
+    "seed-content:test": "ts-node seed-content .env.test",
     "seed-content:staging": "ts-node seed-content .env.staging"
   },
   "engines": {
