--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ steps:
       PORT: 3000
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
       OPENAI_EMBEDDING_MODEL_VERSION: 2023-03-15-preview
-      MONGODB_DATABASE_NAME: docs-chatbot-staging
+      MONGODB_DATABASE_NAME: docs-chatbot-test
       VECTOR_SEARCH_INDEX_NAME: default
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
       # TODO: add to Drone secrets
