--- a/chat-server/Dockerfile
+++ b/chat-server/Dockerfile
@@ -2,6 +2,7 @@
 FROM node:18-alpine as builder
 WORKDIR /app
 
+COPY ../chat-core ./chat-core/
 COPY src/ ./src/
 COPY package*.json tsconfig.json ./
 RUN npm ci && npm run build
@@ -12,6 +13,7 @@ ENV NODE_ENV=production
 WORKDIR /app
 
 # Install only production dependencies
+COPY ../chat-core ./chat-core/
 COPY package*.json ./
 RUN npm ci --omit=dev
 
