--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.2",
     "common-tags": "^1",
+    "dotenv": "^16.3.1",
     "mongodb": "^5.6.0",
     "openai": "^3",
     "winston": "^3"
