--- a/.drone.yml
+++ b/.drone.yml
@@ -69,8 +69,8 @@ steps:
   - name: publish-staging-chat-server
     image: plugins/kaniko-ecr
     settings:
-      dockerfile: chat-server/Dockerfile
-      context: chat-server
+      dockerfile: Dockerfile
+      # context: chat-server
       create_repository: true
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
