Implement env var assertion
WIP: Implement embedder

Significantly clean up the EmbedFunc implementation

Apply changes to server

Implement embedding content

Move DatabaseConnection to core library

Use chat-core objects for ingest tool

--- a/ingest/package.json
+++ b/ingest/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "chat-core": "file:../chat-core",
     "deep-equal": "^2.2.1",
     "dotenv": "^16",
     "mongodb": "^5",
