--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,7 @@ steps:
       - cd chat-core
       - npm ci
       - npm test
+      - npm run build
       - cd ..
       - cd chat-server
       - npm ci
