--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -22,11 +22,15 @@
     }
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite --config vite.config.component.js --mode development",
+    "build:component": "tsc && vite build --config vite.config.component.js",
+    "build:static-site:dev": "tsc && vite build --config vite.config.static-site.js --mode development",
+    "build:static-site:staging": "tsc && vite build --config vite.config.static-site.js --mode staging",
+    "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
+    "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
     "format": "prettier --write .",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "vite preview --config vite.config.component.js --mode development",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "release": "release-it"
