--- a/chat-ui/tsconfig.json
+++ b/chat-ui/tsconfig.json
@@ -15,20 +15,13 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    // "strict": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // TODO: adjust to be strict again and fix all errors in code.
-    // This is just to get things to build quickly.
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
-    "noImplicitThis": false,
-    "noFallthroughCasesInSwitch": false,
-    "allowJs": true
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
