--- a/chat-ui/tsconfig.json
+++ b/chat-ui/tsconfig.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
