--- a/chat-server/jest.config.json
+++ b/chat-server/jest.config.json
@@ -1,6 +1,5 @@
 {
   "preset": "ts-jest",
   "setupFiles": ["<rootDir>/src/jestSetUp.ts"],
-  "testPathIgnorePatterns": ["<rootDir>/dist"],
-  "transformIgnorePatterns": ["/node_modules/(?!is-ip)"]
+  "testPathIgnorePatterns": ["<rootDir>/dist"]
 }
