separate format from lint

--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -28,8 +28,9 @@
     "build:static-site:staging": "tsc && vite build --config vite.config.static-site.js --mode staging",
     "preview:static-site:dev": "npm run build:static-site:dev && vite preview --base ./ --config vite.config.static-site.js",
     "preview:static-site:staging": "npm run build:static-site:staging && vite preview --base ./ --config vite.config.static-site.js",
-    "format": "prettier --write .",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --config vite.config.component.js --mode development",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
