--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "build": "rm -rf ./dist/ && tsc",
     "dev": "nodemon src/index.ts",
-    "format": "npm run prettier -- --check",
-    "format:fix": "npm run prettier -- --write",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx,json,md}'",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
     "seed-content:dev": "ts-node seed-content .env",
@@ -52,7 +51,6 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.2",
     "nodemon": "^2.0.22",
