--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rm -rf ./dist/ && tsc",
     "dev": "nodemon src/index.ts",
-    "format": "prettier . --write",
-    "format:check": "prettier . --check",
-    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier ./src --write",
+    "format:check": "prettier ./src --check",
+    "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "start": "node ./dist/index.js",
     "test": "jest --forceExit",
     "seed-content:dev": "ts-node seed-content .env",
