--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -10,10 +10,7 @@
     "format:check": "prettier ./src --check",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "start": "node ./dist/index.js",
-    "test": "jest --forceExit",
-    "seed-content:dev": "ts-node seed-content .env",
-    "seed-content:test": "ts-node seed-content .env.test",
-    "seed-content:staging": "ts-node seed-content .env.staging"
+    "test": "jest --forceExit"
   },
   "engines": {
     "node": "^18",
