--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/openai": "^1.0.0-beta.2",
     "chat-core": "file:../chat-core",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
@@ -29,7 +30,6 @@
     "langchain": "^0.0.95",
     "openai": "^3.2.1",
     "stream-json": "^1.8.0",
-    "@azure/openai": "^1.0.0-beta.2",
     "winston": "^3.9.0"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@types/common-tags": "^1.8.1",
+    "@types/connect-timeout": "^0.0.37",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
