--- a/ingest/package.json
+++ b/ingest/package.json
@@ -40,8 +40,10 @@
     "chat-core": "file:../chat-core",
     "deep-equal": "^2.2.1",
     "dotenv": "^16",
+    "gpt3-tokenizer": "^1.1.5",
+    "langchain": "^0.0.102",
     "mongodb": "^5",
-    "node-fetch": "^3.3.1",
+    "node-fetch": "^2",
     "yargs": "^17"
   }
 }
