--- a/ingest/package.json
+++ b/ingest/package.json
@@ -40,6 +40,7 @@
     "chat-core": "file:../chat-core",
     "deep-equal": "^2.2.1",
     "dotenv": "^16",
+    "exponential-backoff": "^3.1.1",
     "gpt3-tokenizer": "^1.1.5",
     "langchain": "^0.0.102",
     "mongodb": "^5",
