--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -16,16 +16,20 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7",
     "@types/common-tags": "^1",
+    "@types/express": "^4.17.17",
     "@types/jest": "^26",
     "@types/node": "^12",
+    "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
+    "express": "^4.18.2",
     "jest": "^29",
     "mongodb-memory-server": "^8",
+    "node-fetch": "^2.6.12",
     "prettier": "^2",
     "release-it": "^15",
     "ts-jest": "^29",
