--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ steps:
   - name: test
     image: node:18
     commands:
-      - apt-get update && apt-get install -y libssl1.1
+      # - apt-get update && apt-get install -y libssl1.1
       - cd chat-core
       - npm ci
       - npm test
