--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -37,6 +37,7 @@
     "@azure/openai": "^1.0.0-beta.2",
     "common-tags": "^1",
     "dotenv": "^16.3.1",
+    "mathjs": "^11.8.2",
     "mongodb": "^5.6.0",
     "openai": "^3",
     "winston": "^3"
