Add logic for ingest resumption

--- a/design_docs/db/atlas_search_index.jsonc
+++ b/design_docs/db/atlas_search_index.jsonc
@@ -1,7 +1,7 @@
 {
   "name": "knnTestIndex",
   "database": "docs_chat",
-  "collectionName": "content",
+  "collectionName": "embedded_content",
   "mappings": {
     "dynamic": true,
     "fields": {
