Batch stream events

--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.2",
+    "@jest-mock/express": "^2.0.2",
     "chat-core": "file:../chat-core",
     "common-tags": "^1.8.2",
     "cors": "^2.8.5",
