try to deploy cron

--- a/.drone.yml
+++ b/.drone.yml
@@ -206,6 +206,7 @@ name: staging-build-ingest-service
 trigger:
   branch:
     - main
+    - DOCSP-30584 # TODO: remove when done testing
   event:
     - push
   paths:
