--- a/ingest/environments/staging.yaml
+++ b/ingest/environments/staging.yaml
@@ -4,8 +4,7 @@ image:
 
 cronJobs:
   - name: script
-    # TODO: figure out correct schedule
-    schedule: "1 * * * *"
+    schedule: "0 6 * * *" # every day at 6am UTC (1AM EST)
     command: ["node", ".", "all"]
     env:
       OPENAI_EMBEDDING_MODEL: text-embedding-ada-002
@@ -20,13 +19,12 @@ cronJobs:
       OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
       OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
       DEVCENTER_CONNECTION_URI: docs-chatbot-staging # TODO: Add to k8s secrets
-    # TODO: figure out correct resources
     resources:
       # guaranteed amount of resources
       requests:
         cpu: 100m
-        memory: 5Gi
+        memory: 2Gi
       # maximum allowed resources
       limits:
         cpu: 500m
-        memory: 10Gi
+        memory: 5Gi
