--- a/.drone.yml
+++ b/.drone.yml
@@ -182,7 +182,7 @@ steps:
       values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-chat-server,ingress.enabled=true,ingress.hosts[0]=chat-server.docs.prod.corp.mongodb.com
       values_files: ["chat-server/environments/production.yml"]
       api_server: https://api.prod.corp.mongodb.com
-      kubernetes_token:
+      kubernetes_token: # TODO: add token or already there?
         from_secret: prod_kubernetes_token
 
 # Ingest service
