--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "lerna clean",
     "build": "lerna run build",
     "test": "lerna run test",
-    "lint": "lerna run lint"
+    "lint": "lerna run lint",
+    "prepublish": "lerna run prepublish"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
