--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -29,6 +29,7 @@
     "gpt3-tokenizer": "^1.1.5",
     "ip-address": "^8.1.0",
     "langchain": "^0.0.95",
+    "mongodb": "^5.7.0",
     "openai": "^3.2.1",
     "stream-json": "^1.8.0",
     "winston": "^3.9.0"
