--- a/ingest/.env.example
+++ b/ingest/.env.example
@@ -1,10 +1,13 @@
-# TODO: include our relevant env vars here
-# Connection string to be used for MongoDB to connect to Atlas
-MONGODB_CONNECTION_URI=mongodb://localhost:27017
-# The port number used for the app server
 PORT=3000
-# DB to connect to
-MONGODB_DB_NAME=docs_chat
-
+OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
+OPENAI_API_KEY=<api_key>
+OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
+OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
+OPENAI_CHAT_COMPLETION_MODEL_VERSION=<model_version>
+MONGODB_CONNECTION_URI=<connection_uri>
+MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
+VECTOR_SEARCH_INDEX_NAME=<index_name>
 # Connection string for DevCenter
 DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sewho.mongodb.net/?retryWrites=true&w=majority"
