--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "ingest",
     "seed-content"
   ],
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "clean": "lerna clean",
+    "build": "lerna run build",
+    "test": "lerna run test",
+    "lint": "lerna run lint",
+    "prepublish": "lerna run prepublish"
+  },
   "devDependencies": {
     "lerna": "^5.6.2"
   }
