update release-it default release name

--- a/chat-ui/.release-it.json
+++ b/chat-ui/.release-it.json
@@ -3,6 +3,7 @@
     "publish": false
   },
   "github": {
-    "release": true
+    "release": true,
+    "releaseName": "chat-ui-v${version}"
   }
 }
