add release-it conf for relevant packages

--- a/chat-server/.release-it.json
+++ b/chat-server/.release-it.json
@@ -4,6 +4,6 @@
   },
   "github": {
     "release": true,
-    "releaseName": "ingest@${version}"
+    "releaseName": "chat-server@${version}"
   }
 }
