--- a/chat-ui/.release-it.json
+++ b/chat-ui/.release-it.json
@@ -4,6 +4,6 @@
   },
   "github": {
     "release": true,
-    "releaseName": "chat-ui-v${version}"
+    "releaseName": "chat-ui@${version}"
   }
 }
