--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -10,7 +10,8 @@
     "format:check": "prettier ./src --check",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "start": "node ./dist/index.js",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "release": "release-it"
   },
   "engines": {
     "node": "^18",
@@ -55,6 +56,7 @@
     "mongodb-memory-server": "^8.12.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
+    "release-it": "^15",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
