add release-it conf for relevant packages

--- a/chat-server/.release-it.json
+++ b/chat-server/.release-it.json
@@ -5,5 +5,8 @@
   "github": {
     "release": true,
     "releaseName": "chat-server@${version}"
+  },
+  "hooks": {
+    "before:init": ["git pull", "npm run build", "npm run lint", "npm run test"]
   }
 }
