--- a/ingest/package.json
+++ b/ingest/package.json
@@ -11,6 +11,7 @@
     "build": "tsc -b",
     "watch": "tsc -b -w",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
   },
