update README + drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -141,7 +141,7 @@ name: production-build-chat-server
 trigger:
   ref:
     include:
-      - refs/tags/chat-server-*
+      - refs/tags/chat-server@
 
 steps:
   # Builds and publishes Docker image for production
