remove unused lerna scripts

--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "clean": "lerna clean",
     "build": "lerna run build",
     "test": "lerna run test",
-    "lint": "lerna run lint",
-    "prepublish": "lerna run prepublish",
-    "publish": "lerna run publish",
-    "release": "lerna run release"
+    "lint": "lerna run lint"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
